--- a/app/css/style.css
+++ b/app/css/style.css
@@ -129,7 +129,7 @@ textarea {
 }
 .tracks {
     margin: 0 auto;
-    max-width: 900px;
+    max-width: 1000px;
     background: #FFF;
     border-radius: 3px;
     padding: 64px 0 0;
@@ -155,7 +155,7 @@ textarea {
 .player__inner {
     background: #FFF;
     box-shadow: 0 -2px 0 0 rgba(0, 0, 0, 0.15);
-    max-width: 900px;
+    max-width: 1000px;
     margin: 0 auto;
     position: relative;
     height: 84px;
@@ -218,10 +218,7 @@ textarea {
 }
 .player__waveform {
     height: 100%;
-    -webkit-filter: blur(3px);
-    filter: blur(3px);
-    -moz-filter: blur(3px);
-    padding: 5px 0 5px;
+    padding: 12px 0 5px;
 }
 .dropzone__image:active {
     background-color: #4f7ff0;
@@ -372,6 +369,7 @@ textarea {
 .track__info, .track__state {
     display: inline-block;
     vertical-align: top;
+    white-space: nowrap;
 }
 .track__state {
     width: 0;
@@ -438,4 +436,40 @@ textarea {
     padding: 0 10px;
     width: 0;
     opacity: 0;
+}
+.track__data {
+    display: inline-block;
+    vertical-align: top;
+}
+.track__album-cover {
+    display: inline-block;
+    vertical-align: top;
+    background-color: #EAEAEA;
+    width: 71px;
+    height: 71px;
+    border: 1px solid #CCC;
+    margin-right: 16px;
+}
+.track__album-cover .image {
+    padding: 11px;
+    opacity: 0.15;
+}
+.player__inner-track .md-bar2, .player__inner-track .md-container {
+    -webkit-transition: all .1s ease-out;
+    -moz-transition: all .1s ease-out;
+    -ms-transition: all .1s ease-out;
+    -o-transition: all .1s ease-out;
+    transition: all .1s ease-out;
+}
+.player__inner-track:hover .md-bar2, .player__inner-track:hover .md-container {
+    height: 10px;
+}
+.track__image {
+    width: 100%;
+    background-color: #fff;
+    height: 100%;
+    opacity: 1 !important;
+}
+.md-dialog-is-showing {
+    top: 0 !important;
 }
